//
// This file contains protobuf options for protox flatbuffers scripted rendering.
// Uses proto ids starting at 92000
//

syntax = "proto3";

import "google/protobuf/descriptor.proto";

package fbs;

enum IntType {
  BYTE = 0;
  UBYTE = 1;
  SHORT = 2;
  USHORT = 3;
  INT = 4;
  UINT = 5;
  LONG = 6;
  ULONG = 7;
}

enum MessageType {
  STRUCT = 0;
  UNION = 1;
}

extend google.protobuf.FileOptions {
  repeated string file_attribute = 92000;
  string file_identifier = 92001;
  string file_extension = 92002;
  string root_type = 92003;
}

extend google.protobuf.EnumOptions {
  IntType enum_type = 92000;
}

extend google.protobuf.MessageOptions {
  MessageType message_type = 92000;
}

extend google.protobuf.FieldOptions {
  string field_type = 92000;
  bool bool_default = 92001;
  int64 int_default = 92002;
  double float_default = 92003;
  repeated string field_attribute = 92004;
}
