//
// This file contains general protox protobuf options.
//
// protox uses option #s starting at 91000 in an attempt to reduce collision with user options.
// If they do collide, you can change them without issue.
//

syntax = "proto3";

import "google/protobuf/descriptor.proto";

package protox;

extend google.protobuf.FieldOptions {
  // When parsing this type in templates, use this value instead of the
  // protobuf type. This allows you to differentiate between types that are the same
  // in protobuf, but you want to interpret differently in your generated code.
  //
  // For example:
  //    int32 my_id = 1 [(protox.native_type) = "IdType"];
  // in a template file:
  //    {{relative_type}} {{field_name}};
  // would produce:
  //    IdType my_id;
  string native_type = 91000;
}
